<resources>
    <string name="about_us_content" translatable="true"><![CDATA[
    <h2>License and Information</h2>
    <p>This program is Free/Libre Open-Source Software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version <a href=\"https://www.gnu.org/licenses/gpl-3.0.html\">full text</a></p>
    <p>This app is based on \'Flym RSS Reader\', copyright 2013–2016 Frédéric Julian. Among features added to this fork are:</p>
    
	• feed group expanding<br/>
    • tap actions<br/>
    • max image per feed download count<br/>
    • ability to cancel refresh process<br/>
    • arbitrary web page loading<br/>
    • local PDF (unsupported in F-Droid app version), FB2 EPUB & book support<br/>
    • and much more<br/>

    The app was extended from RSS reader to read any web and local content in a single view & interaction style

    <h2>Download ap app:</h2>
    • <a href="https://www.rustore.ru/catalog/app/ru.yanus171.feedexfork/">RuStore</a><br/>
    • <a href="https://f-droid.org/en/packages/ru.yanus171.feedexfork/">F-Droid</a> (app version without PDF support)<br/>
    • The most recent release you can find on <a href="https://github.com/yanus171/Handy-News-Reader/releases/\">GitHib</a>.
    You can also try <a href=\"https://github.com/yanus171/Handy-News-Reader/issues/683\">beta</a><br/>

    <h2>Web site:</h2>
    • Discuss an app on <a href="https://github.com/yanus171/Handy-News-Reader\">GitHub</a><br/>
    • old <b><a href=\"https://handynewsreader.blogspot.com\">website</a></b><br/>

    <h2>Support</h2>
    <p>If you stumble upon a problem with the app, You can:</p>
    • open an issue on <a href="https://github.com/yanus171/Handy-News-Reader/issues\">GitHub issues page</a><br/>
    • <a href="mailto:workyalex@mail.ru?subject=Handy%20News%20Reader%20problem">email the developer</a><br/>
	
    <h2>Your Support</h2>
    <p>If you have an idea for a new feature you can:</p>
    • open an issue on <a href="https://github.com/yanus171/Handy-News-Reader/issues">GitHub issues page</a><br/>
    • <a href="mailto:workyalex@mail.ru?subject=Handy%20News%20Reader%20idea">email the developer</a>

	<p>If you find this app useful please rate it at <a href="https://www.rustore.ru/catalog/app/ru.yanus171.feedexfork">RuStore</a></p>
    You can also <a href=\"https://github.com/yanus171/Handy-News-Reader\">make a donation</a> </b> (link at the end of the description)
 
    <h2>Translations</h2>
	You can help in translation to your own language at <b><a href="https://crowdin.com/project/handy-news-reader">Crowdin</a></b> If your language isn\'t available then please send an <b><a href="mailto:workyalex@mail.ru?subject=Handy%20News%20Reader%20translation">e-mail to the developer</a></b>

    <h2>Acknowledgments</h2>
    <h3>Developers:</h3>
    ***developerList***
	<h3>Translators:</h3>
    ***translatorList***
    ]]></string>
    <string name="app_name">Handy Reading</string>
    <string name="about_title_version">version</string>
    <string name="about_handy_news_reader">About Handy Reading</string>
    <string name="about_handy_news_reader_descr">License, support, translations, etc.</string>
    <string name="welcome_title">Welcome to Handy Reading. Would you like to add a feed?</string>
    <string name="never">never</string>
    <string name="last_update">Update</string>
    <string name="colon">:\u00A0</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_refresh">Refresh</string>
    <string name="flym_feeds">Handy Reading Feeds</string>
    <string name="error">Error</string>
    <string name="network_error">You are off-line</string>
    <string name="loading">Loading…</string>
    <string name="no_result">No results</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="feeds">Feeds</string>
    <string name="menu_article_web_search">Article Web Search</string>
    <string name="menu_add_feed">Add feed</string>
    <string name="no_feeds">No feeds</string>
    <string name="no_filters">No rules</string>
    <string name="context_menu_add">Add</string>
    <string name="context_menu_delete">Delete</string>
    <string name="edit_feed_title">Edit a feed</string>
    <string name="new_feed_title">New feed</string>
    <string name="context_menu_edit">Edit</string>
    <string name="menu_add_group">Add a group</string>
    <string name="menu_import_export">Export and import</string>
    <string name="menu_import">Import from an .opml file</string>
    <string name="menu_export">Export to an .opml file</string>
    <string name="storage_request_explanation">To be able to import or export the feeds and app settings from or to a file, you must allow the application to access to the storage memory</string>
    <string name="error_feed_error">The feed website is unreachable</string>
    <string name="error_feed_process">The feed can not be processed</string>
    <string name="error_feed_url_exists">The address already exists</string>
    <string name="error_feed_import">The selected file could not be imported</string>
    <string name="error_feed_export">Export has failed. Make sure you have a writable SD-card mounted</string>
    <string name="error_external_storage_not_available">The external storage (e.g., SD-card) is not available</string>
    <string name="feed_url">URL address</string>
    <string name="optional">(optional)</string>
    <string name="website_or_feed">(feed URL or search keyword)</string>
    <string name="tab_feed_title">Feed</string>
    <string name="tab_filters_title">Filter</string>
    <string name="feed_title">TITLE</string>
    <string name="feed_filters">FILTER RULES</string>
    <string name="filter_add_title">Add a rule</string>
    <string name="filter_delete_title">Delete a rule</string>
    <string name="filter_edit_title">Edit a rule</string>
    <string name="filter_is_regex">&#8230;is a regular expression</string>
    <string name="filter_apply_to_title">Apply to title</string>
    <string name="filter_apply_to_content">Apply to content</string>
    <string name="accept">ACCEPT</string>
    <string name="reject">REJECT</string>
    <string name="feed_search">Feed search</string>
    <string name="web_page_search_duckduckgo">Search the Web (DuckDuckGo)</string>
    <string name="select_file">Select Downloads folder file:</string>
    <string name="select_file_from_subfolder">Select Downloads/handy_news_reader folder file:</string>
    <string name="question_delete_feed">Do you really want to delete this feed?</string>
    <string name="question_delete_feeds">Do you really want to delete %d feeds?</string>
    <string name="question_delete_group">Do you really want to delete this group and all of its feeds?</string>
    <string name="question_delete_filter">Do you really want to delete this filter?</string>
    <string name="add_group_title">Select the group name</string>
    <string name="edit_group_title">Edit the group name</string>
    <string name="to_group_title">Feed move action</string>
    <string name="to_group_message">Would You like to put this feed inside or outside this group?</string>
    <string name="to_group_above">Outside the group</string>
    <string name="to_group_into">Into the group</string>
    <string name="add_custom_feed">Add a custom feed or search for one</string>
    <string name="unread_entries">Unread</string>
    <string name="all_entries">All articles</string>
    <string name="no_entries">No articles</string>
    <string name="downloadOneImage">Download the image</string>
    <string name="favorites">Starred</string>
    <string name="last_read">Last read</string>
    <string name="context_menu_share_starred_via_file">Starred articles via file</string>
    <string name="context_menu_share_starred_via_text">Starred articles via text</string>
    <string name="menu_star">Star</string>
    <string name="menu_unstar">Unstar</string>
    <string name="menu_share">Share</string>
    <string name="menu_mark_all_as_unread">Mark all as unread</string>
    <string name="menu_mark_upper_as_read">Mark upper as read</string>
    <string name="menu_mark_lower_as_read">Mark lower as read</string>
    <string name="menu_full_screen">Full screen</string>
    <string name="menu_actionbar_visible">Action Bar</string>
    <string name="menu_font_bold">Bold font</string>
    <string name="menu_copy_clipboard">Copy link</string>
    <string name="menu_cancel_refresh">Cancel update</string>
    <string name="menu_delete_non_starred">Reset the feed</string>
    <string name="menu_toogle_unread_all">Unread|All</string>
    <string name="menu_load_all_images">All images</string>
    <string name="menu_mark_as_unread">Mark as unread</string>
    <string name="menu_reload_full_text">Full text</string>
    <string name="menu_reload_full_text_without_mobilizer">Without Mobilizer</string>
    <string name="open_link">Open link</string>
    <string name="show_article_url">Show article URL</string>
    <string name="markAllAsRead">Mark all as read</string>
    <string name="pageDown">page down (long tap - to bottom)</string>
    <string name="fullScreenToggle">toggle full screen | all images)</string>
    <string name="actionBarToggle">toggle Action Bar | reload text)</string>
    <string name="share_all_text">Share whole text</string>
    <string name="show_progress_info">Detailed progress technical info</string>
    <string name="force_landscape_orientation">Landscape orientation</string>
    <string name="force_portrait_orientation">Portrait orientation</string>
    <string name="markAsStarred">Mark as starred</string>
    <string name="reload_full_text_with_tags">Edit Content</string>
    <string name="keyword">keyword(s)</string>
    <string name="menu_toggle_theme">Change theme</string>
    <string name="create_auto_backup">Run auto backup now</string>
    <string name="settings">Settings</string>
    <string name="menu_add_feed_shortcut">Create a shortcut on Home Screen</string>
    <string name="show_html">Show HTML</string>
    <string name="image_white_background">Image white background</string>
    <string name="menu_go_back">Go back</string>
    <string name="menu_go_top">Scroll to top</string>
    <string name="menu_close">Close</string>
    <string name="add_entry_shortcut">Add article shortcut</string>
    <string name="menu_reload_with_tables_toggle">With tables</string>
    <string name="menu_display_options">Display options</string>
    <string name="menu_reload">Reload</string>
    <string name="menu_delete_old">Delete old articles</string>
    <string name="menu_copy_feed">Duplicate current feed</string>
    <string name="menu_show_entry_text">Article\'s texts</string>
    <string name="removeText">Remove text</string>
    <string name="filter_apply_to_author">Apply to author</string>
    <string name="filter_apply_to_category">Apply to category</string>
    <string name="filter_apply_to_url">Apply to URL</string>
    <string name="create_backup">Create separate backup file</string>
    <string name="menu_edit_article_url">Edit URL</string>
    <string name="menu_edit_article_title">Edit title</string>
    <string name="menu_edit_feed">Edit feed</string>
    <string name="menu_reload_full_text_with_scripts">With scripts</string>
    <string name="menu_reload_full_text_with_debug">With debug</string>
    <string name="menu_import_from_backup_file">Import from backup file</string>
    <string name="with_labels">with labels:</string>
    <string name="menu_force_orientation_by_sensor">App orientation by sensor</string>
    <string name="menu_article_orientation">Article orientation</string>
    <string name="menu_replace_img_with_a_link_toggle">Replace img with A link</string>
</resources>