<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/menu_star"
        android:icon="@drawable/rating_not_important"
        android:title="@string/menu_star"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_mark_as_unread"
        android:icon="@drawable/rounded_checbox_white"
        android:title="@string/menu_mark_as_unread"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_add_feed"
        android:icon="@drawable/content_new"
        android:title="@string/menu_add_feed" />
    <item
        android:id="@+id/menu_go_top"
        android:title="@string/menu_go_top" />
    <item
        android:id="@+id/menu_go_back"
        android:title="@string/menu_go_back" />
    <item
        android:id="@+id/menu_menu_by_tap_enabled"
        android:checkable="true"
        android:title="@string/menu_by_tap_enabled" />
    <item
        android:id="@+id/menu_share_group"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/menu_share">
        <menu>
            <item
                android:id="@+id/menu_share"
                android:icon="@drawable/social_share"
                android:title="@string/menu_share"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/menu_open_link"
                android:icon="@android:drawable/ic_menu_send"
                android:title="@string/open_link" />
            <item
                android:id="@+id/menu_share_all_text"
                android:icon="@android:drawable/ic_menu_share"
                android:title="@string/share_all_text" />
            <item
                android:id="@+id/menu_copy_clipboard"
                android:icon="@drawable/content_copy"
                android:title="@string/menu_copy_clipboard" />
            <item
                android:id="@+id/menu_show_html"
                android:title="@string/show_html" />
            <item
                android:id="@+id/menu_add_entry_shortcut"
                android:title="@string/add_entry_shortcut" />
        </menu>
    </item>

    <item
        android:id="@+id/menu_display_options"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/menu_display_options"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/menu_full_screen"
                android:checkable="true"
                android:icon="@drawable/full_screen"
                android:title="@string/menu_full_screen"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_actionbar_visible"
                android:checkable="true"
                android:icon="@android:drawable/ic_menu_upload"
                android:title="@string/menu_actionbar_visible"
                app:showAsAction="never" />

            <item
                android:id="@+id/menu_font_bold"
                android:checkable="true"
                android:title="@string/menu_font_bold" />
            <item
                android:id="@+id/menu_image_white_background"
                android:checkable="true"
                android:title="@string/image_white_background" />
            <item
                android:id="@+id/menu_show_progress_info"
                android:checkable="true"
                android:title="@string/show_progress_info" />
            <item
                android:id="@+id/menu_toggle_theme"
                android:title="@string/menu_toggle_theme"
                android:visible="true"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_lock_land_orientation"
                android:checkable="true"
                android:icon="@android:drawable/ic_menu_rotate"
                android:title="@string/lock_orientation" />
        </menu>
    </item>
    <item
        android:id="@+id/menu_reload"
        android:icon="@drawable/refresh"
        android:title="@string/menu_reload"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/menu_reload_full_text"
                android:icon="@drawable/refresh"
                android:title="@string/menu_reload_full_text" />
            <item
                android:id="@+id/menu_reload_full_text_without_mobilizer"
                android:title="@string/menu_reload_full_text_without_mobilizer" />
            <item
                android:id="@+id/menu_reload_full_text_with_tags"
                android:title="@string/reload_full_text_with_tags" />
            <item
                android:id="@+id/menu_reload_with_tables_toggle"
                android:checkable="true"
                android:icon="@android:drawable/ic_menu_today"
                android:title="@string/menu_reload_with_tables_toggle" />
            <item
                android:id="@+id/menu_load_all_images"
                android:icon="@android:drawable/ic_menu_gallery"
                android:title="@string/menu_load_all_images" />
        </menu>
    </item>
    <item
        android:id="@+id/menu_cancel_refresh"
        android:icon="@drawable/ic_action_cancel_gray"
        android:orderInCategory="0"
        android:title="@string/menu_cancel_refresh"
        android:visible="true" />
    <item
        android:id="@+id/menu_setting"
        android:icon="@drawable/action_settings"
        android:title="@string/settings" />
    <item
        android:id="@+id/menu_close"
        android:icon="@android:drawable/ic_lock_power_off"
        android:title="@string/menu_close" />

</menu>

