<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_sync"
        android:title="@string/menu_refresh"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_show_entry_text"
        android:icon="@drawable/ic_receipt"
        android:title="@string/menu_show_entry_text"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_cancel_refresh"
        android:icon="@drawable/ic_sync_disabled"
        app:showAsAction="always"
        android:visible="false"
        android:title="@string/menu_cancel_refresh"/>
    <item
        android:id="@+id/menu_toggle_theme"
        app:showAsAction="collapseActionView"
        android:visible="true"
        android:title="@string/menu_toggle_theme"/>
    <item
        android:id="@+id/menu_mark_all_as_read"
        android:title="@string/markAllAsRead"/>
    <item
        android:id="@+id/menu_reset_feed_and_delete_all_articles"
        android:icon="@drawable/content_discard"
        android:title="@string/menu_delete_non_starred"/>
    <item
        android:id="@+id/menu_toogle_toogle_unread_all"
        android:icon="@drawable/ic_check_box"
        android:title="@string/menu_toogle_unread_all"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_create_auto_backup"
        android:title="@string/create_auto_backup"/>
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        android:title="@android:string/search_go"
        app:showAsAction="always"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />
    <item
        android:id="@+id/menu_share_starred"
        android:icon="@drawable/ic_share"
        android:title="@string/context_menu_share_starred"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_add_feed_shortcut"
        android:title="@string/menu_add_feed_shortcut"/>
    <item
        android:id="@+id/menu_show_article_url_toggle"
        android:checkable="true"
        android:title="@string/show_article_url"/>
    <item
        android:id="@+id/menu_show_progress_info"
        android:checkable="true"
        android:title="@string/show_progress_info" />
    <item
        android:id="@+id/menu_copy_feed"
        android:title="@string/menu_copy_feed"/>
    <item
        android:id="@+id/menu_delete_old"
        android:title="@string/menu_delete_old"/>

</menu>