<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <RadioGroup
        android:id="@+id/actionTypeRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <RadioButton
            android:id="@+id/acceptRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept"
            android:textColor="#669900"/>

        <RadioButton
            android:id="@+id/rejectRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/reject"
            android:textColor="#CC0000"/>
        <RadioButton
            android:id="@+id/removeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/removeText"
            android:textColor="@android:color/holo_red_dark"/>

        <RadioButton
            android:id="@+id/markAsStarredRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/markAsStarred"
            android:textColor="@android:color/holo_blue_dark"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:id="@+id/labelListCaptionTextView"
                android:text="@string/with_labels"
                android:paddingStart="10dp"
                tools:ignore="HardcodedText,RtlSymmetry"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/labelListTextView"
                android:paddingLeft="10dp"
                android:text="labels"
                android:paddingStart="10dp"
                tools:ignore="HardcodedText,RtlSymmetry" />
        </LinearLayout>

    </RadioGroup>

    <EditText
        android:id="@+id/filterText"
        android:layout_width="match_parent"
        android:hint="@string/keyword"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:importantForAutofill="no"
        android:inputType="text">

        <requestFocus/>
    </EditText>

    <CheckBox
        android:id="@+id/regexCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_is_regex"/>

    <RadioGroup
        android:id="@+id/applyTypeRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <RadioButton
            android:id="@+id/applyTitleRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/filter_apply_to_title"/>

        <RadioButton
            android:id="@+id/applyContentRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_apply_to_content"/>

        <RadioButton
            android:id="@+id/applyAuthorRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_apply_to_author"/>
        <RadioButton
            android:id="@+id/applyCategoryRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_apply_to_category"/>
        <RadioButton
            android:id="@+id/applyUrlRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_apply_to_url"/>
    </RadioGroup>

</LinearLayout>