<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="bottom"
    android:layout_alignParentBottom="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:showIn="@layout/fragment_entry_list">

    <FrameLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/pageDownBtn"
            style="@style/TapZone"
            android:layout_width="match_parent"
            android:layout_height="10mm"
            android:layout_gravity="bottom"
            android:layout_alignParentBottom="true"
            android:text="@string/pageDown" />

        <TextView
            android:id="@+id/toggleFullScreenStatusBarBtn"
            style="@style/TapZoneBtn"
            android:layout_gravity="start|bottom"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:text="@string/fullScreenToggle" />

        <TextView
            android:id="@+id/toggleFullscreenBtn"
            style="@style/TapZoneBtn"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="end|bottom"
            android:text="@string/actionBarToggle" />
    </FrameLayout>

    <include layout="@layout/status_view" />
</LinearLayout>